# rhost_app

./: .gitignore  Cargo.toml  README.md  pathfinder.py  rnsm.py
sample_data/: hello.txt
sample_data/subdir/: rnsm69.py
sample_data/test_placeholder2/: hello23.txt
src/: app.rs  main.rs  ui.rs  updated-ui.rs
ui/: app-window.slint
