[package]
name = "counter_host"
version = "0.1.0"
edition = "2021"

[dependencies]
block-modes = "0.9.0"
slint = "1.7.2"
log = "0.4"
env_logger = "0.10"
cipher = { version = "0.4", features = ["block-padding"] }
rand = "0.8"
zip = "0.6"
anyhow = "1.0"
walkdir = "2.3"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
aes-soft = "0.6.4"

[build-dependencies]
slint-build = "1.7.2"

[[bin]]
name = "counter_host"
path = "src/main.rs"