[package]
name = "Calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading"] }


[build-dependencies]
slint-build = "1.7.2"

# Set Windows subsystem to "windows" to avoid console window
[[bin]]
name = "Calculator"
path = "src/main.rs"
windows_subsystem = "windows"
